--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ url: https://infinity1009.github.io/Saki.github.io/ # the base hostname & protoc
 permalink: /:year-:month/:title
 timezone:
 
-favicon: /assets/img/favicon.ico
+favicon: /assets/img/ICO.ico
 
 google_analytics: #UA—XXXXXXXX-X
 disqus_shortname: #disqus shortname
